# wayland-protocol-docs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.txt  build  bundle.js  index.html  main.css  update_protocols.sh  watch
assets/: package.json  postcss.config.js  webpack.config.js
protocols/: alpha_modifier_v1.html  appmenu.html  blur.html  content_type_v1.html  contrast.html  cursor_shape_v1.html  dpms.html  drm_lease_v1.html  ext_foreign_toplevel_list_v1.html  ext_idle_notify_v1.html  ext_image_capture_source_v1.html  ext_image_copy_capture_v1.html  ext_session_lock_v1.html  ext_transient_seat_v1.html  fake_input.html  fractional_scale_v1.html  fullscreen_shell.html  fullscreen_shell_unstable_v1.html  idle.html  idle_inhibit_unstable_v1.html  input_method_unstable_v1.html  input_method_unstable_v2.html  input_timestamps_unstable_v1.html  kde_external_brightness_v1.html  kde_lockscreen_overlay_v1.html  kde_output_device_v2.html  kde_output_management_v2.html  kde_output_order_v1.html  kde_primary_output_v1.html  kde_screen_edge_v1.html  keyboard_shortcuts_inhibit_unstable_v1.html  keystate.html  linux_dmabuf_unstable_v1.html  linux_dmabuf_v1.html  linux_drm_syncobj_v1.html  org_kde_kwin_outputdevice.html  org_kde_plasma_virtual_desktop.html  outputmanagement.html  plasma_shell.html  plasma_window_management.html  (+50 more)
site/: bundle.js  index.html
src/: filters.rs  format.rs  main.rs  protocol.rs
templates/: base.html  breadcrumbs.html  hello.html  index.html  protocol.html  protocol_index.html  request.html
wayland-protocol-docs-derive/: Cargo.toml
(+13 files in other folders)
