[package]
name = "wayland-protocol-docs"
version = "0.1.0"
authors = ["Ho-Yon Mak <hoyon.mak@gmail.com>"]
edition = "2018"

[dependencies]
wayland-protocol-docs-derive = { path = "wayland-protocol-docs-derive" }
askama = "0.9"
xmltree = "0.10"
unindent = "0.1.5"
glob = "0.3"

[build-dependencies]
askama = "0.9"
